[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/LevelEnd.gd" type="Script" id=1]
[ext_resource path="res://Sprites/light.png" type="Texture" id=2]
[ext_resource path="res://Scenes/ScrollLevel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Plr.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/Whoosh Digital 08.wav" type="AudioStream" id=5]
[ext_resource path="res://EndLevelRects/template.png" type="Texture" id=6]
[ext_resource path="res://Resources/Stacked pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/base.tres" type="TileSet" id=8]
[ext_resource path="res://Sprites/LevelEnd.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -48, -48, 48, -48, 48, 48, -48, 48 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 7 )

[node name="Lvl5" type="Node2D"]
script = ExtResource( 1 )

[node name="Backdrop" type="Sprite" parent="."]
modulate = Color( 1.1, 1.1, 1.1, 1 )
position = Vector2( 960, 544 )
scale = Vector2( 1, 1.0037 )
texture = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="Backdrop"]
position = Vector2( -24, -964 )
scale = Vector2( 1, 0.996314 )
texture = ExtResource( 2 )
texture_scale = 4.0
shadow_enabled = true

[node name="Plr" parent="." instance=ExtResource( 4 )]
position = Vector2( 360, 256 )

[node name="PlrTimer" type="Timer" parent="Plr"]
one_shot = true

[node name="MovingLevel" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="MovingLevel"]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -589814, 6, 0, -589813, 8, 0, -524278, 12, 0, -524277, 14, 0, -131069, 6, 0, -131068, 7, 0, -131067, 7, 0, -131066, 7, 0, -131065, 8, 0, -65533, 9, 0, -65531, 16, 0, -65530, 13, 0, -65529, 14, 0, 3, 9, 0, 4, 16, 0, 5, 14, 0, 65539, 12, 0, 65540, 14, 0, 131085, 6, 0, 131086, 8, 0, 196621, 20, 0, 196622, 14, 0, 262157, 20, 0, 327693, 20, 0, 393229, 20, 0, 458762, 1, 0, 458765, 20, 0, 524298, 20, 0, 524301, 20, 0, 589828, 6, 0, 589829, 7, 0, 589830, 7, 0, 589831, 8, 0, 589834, 20, 0, 589837, 20, 0, 655364, 9, 0, 655367, 11, 0, 655370, 20, 0, 655373, 20, 0, 720900, 12, 0, 720901, 13, 0, 720902, 13, 0, 720903, 14, 0, 720906, 2, 0, 720909, 2, 0 )

[node name="Tween" type="Tween" parent="MovingLevel"]

[node name="LevelEnd" type="Area2D" parent="MovingLevel"]
position = Vector2( 704, -624 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingLevel/LevelEnd"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="MovingLevel/LevelEnd"]
scale = Vector2( 6, 6 )
texture = ExtResource( 9 )

[node name="WinTimer" type="Timer" parent="MovingLevel/LevelEnd"]

[node name="LightOccluder2D" type="LightOccluder2D" parent="MovingLevel/LevelEnd"]
occluder = SubResource( 2 )

[node name="Scroll" type="AudioStreamPlayer" parent="MovingLevel"]
stream = ExtResource( 5 )
volume_db = 2.0

[node name="eQuote" type="Sprite" parent="."]
position = Vector2( 1920, 0 )
texture = ExtResource( 6 )
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="eQuote"]
self_modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
anchor_left = -0.0208333
anchor_top = -0.0925926
anchor_right = -0.0125
anchor_bottom = 0.101852
margin_left = 440.0
margin_top = 324.0
margin_right = 1480.0
margin_bottom = 954.0
custom_fonts/normal_font = SubResource( 3 )
text = "please stop winning, it is very embarassing

					   -T
	"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="eQuote"]

[node name="QuoteTimer" type="Timer" parent="eQuote"]
one_shot = true

[node name="sQuote" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="sQuote"]
self_modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
anchor_left = -0.0208333
anchor_top = -0.0925926
anchor_right = -0.0125
anchor_bottom = 0.101852
margin_left = 440.0
margin_top = 324.0
margin_right = 1480.0
margin_bottom = 954.0
custom_fonts/normal_font = SubResource( 4 )
text = "i'm going easy on 
you. that's the
only reason you're still alive

					   -T
	"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="sQuote"]

[node name="QuoteTimer" type="Timer" parent="sQuote"]
one_shot = true
[connection signal="timeout" from="Plr/PlrTimer" to="." method="_on_PlrTimer_timeout"]
[connection signal="body_entered" from="MovingLevel/LevelEnd" to="." method="_on_LevelEnd_body_entered"]
[connection signal="timeout" from="MovingLevel/LevelEnd/WinTimer" to="." method="_on_WinTimer_timeout"]
[connection signal="timeout" from="eQuote/QuoteTimer" to="." method="_on_QuoteTimer_timeout"]
